# steamdrawio

./: .$diagram.drawio.dtmp  .$networkx_graph.drawio.dtmp  README.md  _diagramDrawio.py  deploy.sh  diagram.drawio  pyproject.toml  setup.py  shapes.csv  steamdrawio.py  testing.drawio
src/steamdrawio/: .$diagram.drawio.dtmp  .$test2 copy.drawio.dtmp  __init__.py  compounds.py  diagram.drawio  ethanol.py  ethanol_tutorial.py  main.drawio  scratch.py  steamdrawio.py  test.drawio  test.py  test2 copy.drawio
steamdrawio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
steamdrawio_markmw.egg-info/: PKG-INFO  SOURCES.txt
