[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "steamdrawio"
version = "0.0.1"
authors = [
  { name="Mark Mba Wright", email="markmw@iastate.edu" },
]
description = "A package to draw BioSteam diagrams in draw.io"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/markjet7/steamdrawio"
"Bug Tracker" = "https://github.com/markjet7/steamdrawio/issues"